counterexample_modeling/antlr/smvParser.py
# Generated from smv.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class smvParser ( Parser ):

    grammarFileName = "smv.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'0'", "'-'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'U'", "'SPEC'", "';'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'wordl'", "'bool'", "'toint'", "'const'", 
                     "','", "':'", "'?'", "'&'", "'|'", "'xor'", "'xnor'", 
                     "'->'", "'<->'", "'='", "'!='", "'<='", "'<'", "'>'", 
                     "'>='", "'+'", "'mod'", "'max'", "'min'", "'>>'", "'<<'", 
                     "'::'", "'swconst'", "'uwconst'", "'signed'", "'sizeof'", 
                     "'unsigned'", "'extend'", "'resize'", "'union'", "' in '", 
                     "'..'", "'!'", "'abs'", "'_'", "'.'", "'self'", "'case'", 
                     "'esac'", "'ISA'", "'boolean'", "'word'", "'unsigned word'", 
                     "'signed word'", "'array'", "' of '", "'process'", 
                     "'VAR'", "'IVAR'", "'FROZENVAR'", "'DEFINE'", "'CONSTANTS'", 
                     "'ASSIGN'", "'init'", "'next'", "'TRANS'", "'INIT'", 
                     "'INVAR'", "'FAIRNESS'", "'JUSTICE'", "'COMPASSION'", 
                     "'MODULE'", "'LTLSPEC'", "' '" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WHITESPASE", "DIGIT", "ZERO", 
                      "MAINUS", "MAINUS_DIGIT", "BOOLEAN", "IDENTIFIER_WORD", 
                      "CTL_TEMPORAL_OPE", "CTL_TEMPORAL_OPE2", "LTL_RELATIONAL_OPERATOR", 
                      "LTL_TEMPORAL_OPE", "UNTIL", "SPEC", "SCOL", "OPAR", 
                      "CPAR", "OCUR", "CCUR", "OSQU", "CSQU", "WORDL", "BOOL", 
                      "TOINT", "CONST", "COMMA", "COLON", "QUE", "AND", 
                      "OR", "XOR", "XNOR", "ARROW", "DOUBLE_ARROW", "EQUAL", 
                      "NOT_EQUAL", "LESS_EQUAL", "LESS", "GREATER", "GREATER_EQUAL", 
                      "PLUS", "MOD", "MAX", "MIN", "RIGHT_SHIFT", "LEFT_SHIFT", 
                      "DOUBLE_COLON", "SWCONST", "UWCONST", "SIGNED", "SIZEOF", 
                      "UNSIGNED", "EXTEND", "RESIZE", "UNION", "IN", "DOUBLE_DOT", 
                      "SUR", "ABS", "UNDER_BAR", "DOT", "SELF", "CASE", 
                      "ESAC", "ISA", "BOOLEAN_WORD", "WORD", "UNSIGNED_WORD", 
                      "SIGNED_WORD", "ARRAY", "OF", "PROCESS", "VAR", "IVAR", 
                      "FROZENVAR", "DEFINE", "CONSTANTS", "ASSIGN", "INIT", 
                      "NEXT", "TRANS_CONST", "INIT_CONST", "INVAR_CONST", 
                      "FAIRNESS_CONST", "JUSTICE_CONST", "COMPASSION_CONST", 
                      "MODULE", "LTL_SPEC", "SPACE", "NODIGIT", "WORD_BASE", 
                      "WORD_SIGN_SPECIFIER", "HEX_DIGIT" ]

    RULE_identifier = 0
    RULE_define_identifier = 1
    RULE_variable_identifier = 2
    RULE_complex_identifier = 3
    RULE_integer_number = 4
    RULE_constant = 5
    RULE_boolean_constant = 6
    RULE_integer_constant = 7
    RULE_symbolic_constant = 8
    RULE_word_constant = 9
    RULE_word_width = 10
    RULE_word_value = 11
    RULE_range_constant = 12
    RULE_basic_expr = 13
    RULE_basic_expr_list = 14
    RULE_set_body_expr = 15
    RULE_case_expr = 16
    RULE_case_body = 17
    RULE_simple_expr = 18
    RULE_next_expr = 19
    RULE_type_specifier = 20
    RULE_simple_type_specifier = 21
    RULE_enumeration_type_body = 22
    RULE_enumeration_type_value = 23
    RULE_module_type_specifier = 24
    RULE_parameter_list = 25
    RULE_var_declaration = 26
    RULE_ivar_declaration = 27
    RULE_frozenvar_declaration = 28
    RULE_var_list = 29
    RULE_simple_var_list = 30
    RULE_define_declaration = 31
    RULE_define_body = 32
    RULE_constants_declaration = 33
    RULE_constants_body = 34
    RULE_assign_constraint = 35
    RULE_assign_list = 36
    RULE_assign = 37
    RULE_trans_constraint = 38
    RULE_init_constraint = 39
    RULE_invar_constraint = 40
    RULE_fairness_constraint = 41
    RULE_module = 42
    RULE_module_parameters = 43
    RULE_module_body = 44
    RULE_module_element = 45
    RULE_isa_declaration = 46
    RULE_ctl_specification = 47
    RULE_ctl_expr = 48
    RULE_ltl_specification = 49
    RULE_ltl_expr = 50

    ruleNames =  [ "identifier", "define_identifier", "variable_identifier", 
                   "complex_identifier", "integer_number", "constant", "boolean_constant", 
                   "integer_constant", "symbolic_constant", "word_constant", 
                   "word_width", "word_value", "range_constant", "basic_expr", 
                   "basic_expr_list", "set_body_expr", "case_expr", "case_body", 
                   "simple_expr", "next_expr", "type_specifier", "simple_type_specifier", 
                   "enumeration_type_body", "enumeration_type_value", "module_type_specifier", 
                   "parameter_list", "var_declaration", "ivar_declaration", 
                   "frozenvar_declaration", "var_list", "simple_var_list", 
                   "define_declaration", "define_body", "constants_declaration", 
                   "constants_body", "assign_constraint", "assign_list", 
                   "assign", "trans_constraint", "init_constraint", "invar_constraint", 
                   "fairness_constraint", "module", "module_parameters", 
                   "module_body", "module_element", "isa_declaration", "ctl_specification", 
                   "ctl_expr", "ltl_specification", "ltl_expr" ]

    EOF = Token.EOF
    COMMENT=1
    WHITESPASE=2
    DIGIT=3
    ZERO=4
    MAINUS=5
    MAINUS_DIGIT=6
    BOOLEAN=7
    IDENTIFIER_WORD=8
    CTL_TEMPORAL_OPE=9
    CTL_TEMPORAL_OPE2=10
    LTL_RELATIONAL_OPERATOR=11
    LTL_TEMPORAL_OPE=12
    UNTIL=13
    SPEC=14
    SCOL=15
    OPAR=16
    CPAR=17
    OCUR=18
    CCUR=19
    OSQU=20
    CSQU=21
    WORDL=22
    BOOL=23
    TOINT=24
    CONST=25
    COMMA=26
    COLON=27
    QUE=28
    AND=29
    OR=30
    XOR=31
    XNOR=32
    ARROW=33
    DOUBLE_ARROW=34
    EQUAL=35
    NOT_EQUAL=36
    LESS_EQUAL=37
    LESS=38
    GREATER=39
    GREATER_EQUAL=40
    PLUS=41
    MOD=42
    MAX=43
    MIN=44
    RIGHT_SHIFT=45
    LEFT_SHIFT=46
    DOUBLE_COLON=47
    SWCONST=48
    UWCONST=49
    SIGNED=50
    SIZEOF=51
    UNSIGNED=52
    EXTEND=53
    RESIZE=54
    UNION=55
    IN=56
    DOUBLE_DOT=57
    SUR=58
    ABS=59
    UNDER_BAR=60
    DOT=61
    SELF=62
    CASE=63
    ESAC=64
    ISA=65
    BOOLEAN_WORD=66
    WORD=67
    UNSIGNED_WORD=68
    SIGNED_WORD=69
    ARRAY=70
    OF=71
    PROCESS=72
    VAR=73
    IVAR=74
    FROZENVAR=75
    DEFINE=76
    CONSTANTS=77
    ASSIGN=78
    INIT=79
    NEXT=80
    TRANS_CONST=81
    INIT_CONST=82
    INVAR_CONST=83
    FAIRNESS_CONST=84
    JUSTICE_CONST=85
    COMPASSION_CONST=86
    MODULE=87
    LTL_SPEC=88
    SPACE=89
    NODIGIT=90
    WORD_BASE=91
    WORD_SIGN_SPECIFIER=92
    HEX_DIGIT=93

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODIGIT(self):
            return self.getToken(smvParser.NODIGIT, 0)

        def getRuleIndex(self):
            return smvParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = smvParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(smvParser.NODIGIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Define_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complex_identifier(self):
            return self.getTypedRuleContext(smvParser.Complex_identifierContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_define_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefine_identifier" ):
                listener.enterDefine_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefine_identifier" ):
                listener.exitDefine_identifier(self)




    def define_identifier(self):

        localctx = smvParser.Define_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_define_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.complex_identifier(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complex_identifier(self):
            return self.getTypedRuleContext(smvParser.Complex_identifierContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_variable_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_identifier" ):
                listener.enterVariable_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_identifier" ):
                listener.exitVariable_identifier(self)




    def variable_identifier(self):

        localctx = smvParser.Variable_identifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.complex_identifier(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Complex_identifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(smvParser.IdentifierContext,0)


        def SELF(self):
            return self.getToken(smvParser.SELF, 0)

        def complex_identifier(self):
            return self.getTypedRuleContext(smvParser.Complex_identifierContext,0)


        def DOT(self):
            return self.getToken(smvParser.DOT, 0)

        def OSQU(self):
            return self.getToken(smvParser.OSQU, 0)

        def basic_expr(self):
            return self.getTypedRuleContext(smvParser.Basic_exprContext,0)


        def CSQU(self):
            return self.getToken(smvParser.CSQU, 0)

        def getRuleIndex(self):
            return smvParser.RULE_complex_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex_identifier" ):
                listener.enterComplex_identifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex_identifier" ):
                listener.exitComplex_identifier(self)



    def complex_identifier(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = smvParser.Complex_identifierContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_complex_identifier, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [smvParser.NODIGIT]:
                self.state = 109
                self.identifier()
                pass
            elif token in [smvParser.SELF]:
                self.state = 110
                self.match(smvParser.SELF)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = smvParser.Complex_identifierContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_complex_identifier)
                        self.state = 113
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 114
                        self.match(smvParser.DOT)
                        self.state = 115
                        self.identifier()
                        pass

                    elif la_ == 2:
                        localctx = smvParser.Complex_identifierContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_complex_identifier)
                        self.state = 116
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 117
                        self.match(smvParser.OSQU)
                        self.state = 118
                        self.basic_expr(0)
                        self.state = 119
                        self.match(smvParser.CSQU)
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Integer_numberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAINUS_DIGIT(self):
            return self.getToken(smvParser.MAINUS_DIGIT, 0)

        def DIGIT(self):
            return self.getToken(smvParser.DIGIT, 0)

        def integer_number(self):
            return self.getTypedRuleContext(smvParser.Integer_numberContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_integer_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_number" ):
                listener.enterInteger_number(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_number" ):
                listener.exitInteger_number(self)



    def integer_number(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = smvParser.Integer_numberContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_integer_number, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [smvParser.MAINUS_DIGIT]:
                self.state = 127
                self.match(smvParser.MAINUS_DIGIT)
                pass
            elif token in [smvParser.DIGIT]:
                self.state = 128
                self.match(smvParser.DIGIT)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = smvParser.Integer_numberContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_integer_number)
                    self.state = 131
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 132
                    self.match(smvParser.DIGIT) 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean_constant(self):
            return self.getTypedRuleContext(smvParser.Boolean_constantContext,0)


        def integer_constant(self):
            return self.getTypedRuleContext(smvParser.Integer_constantContext,0)


        def symbolic_constant(self):
            return self.getTypedRuleContext(smvParser.Symbolic_constantContext,0)


        def word_constant(self):
            return self.getTypedRuleContext(smvParser.Word_constantContext,0)


        def range_constant(self):
            return self.getTypedRuleContext(smvParser.Range_constantContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = smvParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constant)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.boolean_constant()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.integer_constant()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.symbolic_constant()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.word_constant()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.range_constant()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Boolean_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(smvParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return smvParser.RULE_boolean_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_constant" ):
                listener.enterBoolean_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_constant" ):
                listener.exitBoolean_constant(self)




    def boolean_constant(self):

        localctx = smvParser.Boolean_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolean_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(smvParser.BOOLEAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Integer_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer_number(self):
            return self.getTypedRuleContext(smvParser.Integer_numberContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_integer_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_constant" ):
                listener.enterInteger_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_constant" ):
                listener.exitInteger_constant(self)




    def integer_constant(self):

        localctx = smvParser.Integer_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_integer_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.integer_number(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Symbolic_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(smvParser.IdentifierContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_symbolic_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbolic_constant" ):
                listener.enterSymbolic_constant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbolic_constant" ):
                listener.exitSymbolic_constant(self)




    def symbolic_constant(self):

        localctx = smvParser.Symbolic_constantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_symbolic_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Word_constantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ZERO(self):
            return self.getToken(smvParser.ZERO, 0)

        def OSQU(self, i:int=None):
            if i is None:
                return self.getTokens(smvParser.OSQU)
            else:
                return self.getToken(smvParser.OSQU, i)

        def WORD_SIGN_SPECIFIER(self):
            return self.getToken(smvParser.WORD_SIGN_SPECIFIER, 0)

        def CSQU(self, i:int=None):
            if i is None:
                return self.getTokens(smvParser.CSQU)
            else:
                return self.getToken(smvParser.CSQU, i)

        def WORD_BASE(self):
            return self.getToken(smvParser.WORD_BASE, 0)

        def word_width(self):
            return self.getTypedRuleContext(smvParser.Word_widthContext,0)


        def UNDER_BAR(self):
            return self.getToken(smvParser.UNDER_BAR, 0)

        def word_value(self):
            return self.getTypedRuleContext(smvParser.Word_valueContext,0)


        def getRuleIndex(self):
            return smvParser.RULE_word_constant
